--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -31,3 +31,10 @@ border-1px($color)
     bottom: 0
     width:100%
     border-top: 1px solid $color
+
+// 限制文本行数
+text-lines($num)
+  display: -webkit-box
+  -webkit-box-orient: vertical
+  -webkit-line-clamp: $num
+  overflow: hidden
